removendo desnecessarios